create forgot screen and some part of home screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,6 @@ dependencies:
   cupertino_icons: ^1.0.2
   get:
   flutter_screenutil:
-  password_strength:
   google_fonts:
   firebase_core:
   firebase_auth:
@@ -46,6 +45,7 @@ dependencies:
   cloud_firestore:
   image_picker:
   flutter_form_builder:
+  password_strength_checker:
 
 dev_dependencies:
   flutter_test:
